minor text overlap fix

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
     float: right;
     margin-right: 0px;
     padding-top: 10vw;
+    margin-bottom: 0px;
     width: 16vw;    
 }
 #logo-header {
